include config file changes

--- a/automation_scripts/randollvm.config
+++ b/automation_scripts/randollvm.config
@@ -3,10 +3,10 @@
 	"RANDOLLVM_ROOT": "/evaldisk/akul/BingeSP/Binge-Cornucopia/",
 	"SERVER_URL": "http://128.46.36.110:5002",
 	"ITERATIONS": 2000,
-	"FUZZING_TIME": 7200, 
+	"FUZZING_TIME": 10800, 
 	"DOWNLOADS": "/evaldisk/akul/BingeSP/Binge-Cornucopia/fitness_wrapper/uploaded_files/",
-	"ARCH": "x86-64",
+	"ARCH": "arm",
 	"FITNESS_FUNCTION": "ncd",
 	"SOURCE"          : "/evaldisk/akul/BingeSP/Binge-Cornucopia/afl_sources/free.bc",
-	"THREADS"         : "20"
+	"THREADS"         : "60"
 }
