--- a/automation_scripts/randollvm.config
+++ b/automation_scripts/randollvm.config
@@ -5,7 +5,7 @@
 	"ITERATIONS": 2000,
 	"FUZZING_TIME": 10800, 
 	"DOWNLOADS": "/evaldisk/akul/BingeSP/Binge-Cornucopia/fitness_wrapper/uploaded_files/",
-	"ARCH": "arm",
+	"ARCH": "mips",
 	"FITNESS_FUNCTION": "ncd",
 	"SOURCE"          : "/evaldisk/akul/BingeSP/Binge-Cornucopia/afl_sources/free.bc",
 	"THREADS"         : "60"
