--- a/automation_scripts/randollvm.config
+++ b/automation_scripts/randollvm.config
@@ -5,8 +5,8 @@
 	"ITERATIONS": 2000,
 	"FUZZING_TIME": 10800, 
 	"DOWNLOADS": "/evaldisk/akul/BingeSP/Binge-Cornucopia/fitness_wrapper/uploaded_files/",
-	"ARCH": "mips",
+	"ARCH": "aarch64",
 	"FITNESS_FUNCTION": "ncd",
 	"SOURCE"          : "/evaldisk/akul/BingeSP/Binge-Cornucopia/afl_sources/free.bc",
-	"THREADS"         : "60"
+	"THREADS"         : "30"
 }
